--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script>
-    var socket = io.connect('http://localhost:3000');
+    var socket = io.connect('http://192.168.15.151:3000');
     var minhaSalaAtual;
     socket.on('connect', function(){
       socket.emit('addUsuario', prompt("Qual seu nome de usuario?"));
@@ -21,6 +21,7 @@
       socket.on('atualizarSalas', function(salas, salaAtual){
         minhaSalaAtual = salaAtual;
         atualizaSalas(salas, salaAtual);
+        limparChat();
       });
       socket.on('atualizarListaSalas', function(salas){
         atualizaSalas(salas, minhaSalaAtual);
@@ -28,6 +29,10 @@
       socket.on('updatechat', function (username, data) {
     		$('.mensagens').append('<b>'+username + ':</b> ' + data + '<br>');
     	});
+      socket.on('numeroJogadores', function(num){
+        limparDashboard();
+        atualizarNumJogadores(num);
+      });
     });
 
     $(function() {
@@ -46,6 +51,7 @@
   		});
     });
 
+
     function atualizaSalas(salas, sala){
       $('#salas').empty();
           $.each(salas, function(index, val) {
@@ -61,6 +67,15 @@
     }
     function novaSala() {
       socket.emit('novaSala', prompt("Nome da Sala"));
+    }
+    function limparDashboard(){
+      $('#dashboard').empty();
+    }
+    function atualizarNumJogadores(num){
+      $('#dashboard').append('<h1>'+num+'</h1>');
+    }
+    function limparChat(){
+      $('.mensagens').empty();
     }
   </script>
 </head>
@@ -107,7 +122,7 @@
       <!-- CAMPO CENTRAL -->
         <div class="container-fluid">
           <div class="row">
-            <div class="col">
+            <div id="dashboard" class="col">
 
 
                   <h1 class="mt-4">Infiltrados</h1>
